fix(css): try fix blue box on safari when clicking a link

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@ html {
   scroll-behavior: smooth;
 }
 
+a:focus {
+  box-shadow: none !important;
+}
+
 @media only screen and (min-width: 768px) {
   .navbar.navbar-scroll-theme {
     background-color: rgba(0, 0, 0, 0.6);
